pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGBasic4_all_vpcs_explain_debug.txt
Connectivity explanation for protocol: UDP src-ports: 10-100 dst-ports: 443 between vsi1-ky and 161.26.0.0/12 within test-vpc1-ky
=================================================================================================================================

Connection protocol: UDP src-ports: 10-100 dst-ports: 443 exists between vsi1-ky[10.240.10.4] and Public Internet 161.26.0.0/16
Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Egress:
security group sg1-ky allows connection with the following allow rules
	index: 2, direction: outbound,  conns: protocol: udp,  dstPorts: 1-65535, cidr: 161.26.0.0/16
network ACL acl1-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------

There is no connection "protocol: UDP src-ports: 10-100 dst-ports: 443" between vsi1-ky[10.240.10.4] and Public Internet 161.16.0.0-161.25.255.255,161.27.0.0-161.31.255.255;
connection blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> |


Details:
~~~~~~~~
Egress:
security group sg1-ky blocks connection since there are no relevant allow rules
network ACL acl1-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
